feat: add /auth/server endpoint
